--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "mdb-ui-kit": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -16,6 +17,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "react-router-dom": "^6.9.0",
     "vite": "^4.1.0"
   }
 }
