--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^9.18.0",
+    "mdb-react-ui-kit": "^6.0.0",
     "mdb-ui-kit": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
