--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mdb-react-ui-kit": "^6.0.0",
     "mdb-ui-kit": "^6.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
